nxMyDB v0.2.0 (not released):

nxMyDB v0.1.0 (Sep 8, 2007):
  CHG: Initial release.